src/test/deca/context/valid/sansObjet/non_initialise.deca
// Description :
//    Accès à une variable non initialisée
//
// Resultats :
//    Ok

{
    int a;
    print(a);
}